# Api-Axum-Keylogger

./: LICENSE  README.md  removeKeylogger.sh
api-keylogger/: Cargo.toml
api-keylogger/captures/: 192.168.1.112.clean.txt  192.168.1.112.txt  192.168.1.120.clean.txt  192.168.1.120.txt  192.168.1.53.clean.txt  192.168.1.53.txt  Demians-MacBook-Air.local.clean.txt  Demians-MacBook-Air.local.txt
api-keylogger/payloads/: MinecraftLauncher  MinecraftLauncher.dmg  stage1_macos  stage2  stage2_macos
api-keylogger/payloads/MiLauncher.app/Contents/: Info.plist
api-keylogger/payloads/MiLauncher.app/Contents/MacOS/: stage1
api-keylogger/payloads/MiLauncher.app/Contents/_CodeSignature/: CodeResources
api-keylogger/src/: .env  logs.rs  main.rs  mod.rs  routes.rs  storage.rs
frontend/: index.html
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  Hero.tsx  Navbar.tsx  NewsSection.tsx
frontend/src/styles/: Footer.css  Hero.css  Navbar.css  NewsSection.css  index.css
keylogger/: .keylog.txt  Cargo.toml
keylogger/src/: api.rs  keylogger.rs  main.rs  persistence.rs
stage1/: Cargo.toml  build.sh  go.mod  main.go  stage1_macos
stage1/.cargo/: config.toml
stage1/MiLauncher.app/Contents/: Info.plist
stage1/MiLauncher.app/Contents/MacOS/: stage1
stage1/MinecraftLauncher.app/Contents/MacOS/: stage1
stage1/src/: main.rs
stage2/: Cargo.toml
stage2/src/: api.rs  crypto.rs  keylogger.rs  main.rs  persistence.rs
stage2/src/persistence/: linux.rs  macos.rs  mod.rs  windows.rs
