[package]
name = "api-keylogger"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging y utilidades
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }  # <--- IMPORTANTE
uuid = { version = "1.0", features = ["v4", "serde"] }

aes-gcm = "0.10"
base64 = "0.21"

rand = "0.8"

