[package]
name = "stage2"
version = "1.0.0"
edition = "2021"

[dependencies]
rdev = "0.5"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.3"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.21"
accessibility = "0.1"



[target.'cfg(windows)'.dependencies]
winreg = "0.50"
